fix: improve country validation and provider mapping for deposits and payouts